--- a/Cart.html
+++ b/Cart.html
@@ -16,19 +16,18 @@
 
     </header>
     <nav>
-      <hr>
-        <div class="menu" onclick="window.location.href='index.html';">
-          Home
-        </div>
-      <hr>
-        <div class="menu" onclick="window.location.href='sorter.html';">
-          Lookup
-        </div>
-      <hr>
-        <div class="menu" style="font-size: xx-large;">
-          Cart
-        </div>
-      <hr>
+      <div class="menu" onclick="window.location.href='index.html';">
+        Home
+      </div>
+      <div class="menu" onclick="window.location.href='sorter.html';">
+        Lookup
+      </div>
+      <div class="menu" onclick="window.location.href='Cart.html';">
+        Cart
+      </div>
+      <div class="menu" onclick="window.location.href='deals.html';">
+        Deals
+      </div>
     </nav>
     <div class="items">
       
