--- a/deals.html
+++ b/deals.html
@@ -14,10 +14,21 @@
 
         </header>
         <nav>
-
+            <div class="menu" onclick="window.location.href='index.html';">
+                home
+            </div>
+            <div class="menu" onclick="window.location.href='sorter.html';">
+                Lookup
+            </div>
+            <div class="menu" onclick="window.location.href='Cart.html';">
+                Cart
+            </div>
+            <div class="menu">
+                Deals
+            </div>
         </nav>
         <footer>
-            
+
         </footer>
     </body>
 </html>
