--- a/security.html
+++ b/security.html
@@ -14,19 +14,18 @@
 
         </header>
         <nav>
-          <hr>
           <div class="menu" onclick="window.location.href='index.html';">
             Home
           </div>
-          <hr>
           <div class="menu" style="font-size: xx-large;">
             Lookup
           </div>
-          <hr>
           <div class="menu" onclick="window.location.href='Cart.html';">
             Cart
           </div>
-          <hr>
+          <div class="menu" onclick="window.location.href='deals.html';">
+            Deals
+          </div>
         </nav>
         <br>
         <hr>
