--- a/contacts.html
+++ b/contacts.html
@@ -14,19 +14,16 @@
 
         </header>
         <nav>
-          <hr>
           <div class="menu" onclick="window.location.href='index.html';">
             Home
           </div>
-          <hr>
-          <div class="menu" style="font-size: xx-large;">
+          <div class="menu" onclick="window.location.href='sorter.html';">
             Lookup
           </div>
-          <hr>
           <div class="menu" onclick="window.location.href='Cart.html';">
             Cart
           </div>
-          <hr>
+          <div class="menu" onclick="window.location.href='deals.html';"></div>
         </nav>
         <br>
         <hr>
