--- a/index.html
+++ b/index.html
@@ -55,19 +55,18 @@
       </div>
     </header>
     <nav class="stick">
-      <hr>
-        <div class="menu" style="font-size: xx-large;">
-          Home
-        </div>
-      <hr>
-        <div class="menu" onclick="window.location.href='sorter.html';">
-          Lookup
-        </div>
-      <hr>
-        <div class="menu" onclick="window.location.href='Cart.html';">
-          Cart
-        </div>
-      <hr>
+      <div class="menu" onclick="window.location.href='index.html';">
+        Home
+      </div>
+      <div class="menu" onclick="window.location.href='sorter.html';">
+        Lookup
+      </div>
+      <div class="menu" onclick="window.location.href='Cart.html';">
+        Cart
+      </div>
+      <div class="menu" onclick="window.location.href='deals.html';">
+        Deals
+      </div>
     </nav>
     <hr>
     <footer>
