--- a/productPage.html
+++ b/productPage.html
@@ -13,19 +13,18 @@
 
         </header>
         <nav class="stick">
-            <hr>
-            <div class="menu" onclick="window.location.href='index.html';">
-              Home
-            </div>
-          <hr>
-            <div class="menu" onclick="window.location.href='sorter.html';">
-              Lookup
-            </div>
-          <hr>
-            <div class="menu" onclick="window.location.href='Cart.html';">
-              Cart
-            </div>
-          <hr>
+          <div class="menu" onclick="window.location.href='index.html';">
+            Home
+          </div>
+          <div class="menu" onclick="window.location.href='sorter.html';">
+            Lookup
+          </div>
+          <div class="menu" onclick="window.location.href='Cart.html';">
+            Cart
+          </div>
+          <div class="menu" onclick="window.location.href='deals.html';">
+            Deals
+          </div>
         </nav>
         <hr>
         <br>
