--- a/index.html
+++ b/index.html
@@ -71,59 +71,48 @@
     <hr>
     <footer>
       <div style="text-align:right; padding-right:15px;">
-        <ul>
-          <li>
-            <a class="footerLink">
-              <b>
-                Support
-              </b>
-            </a>
-          </li>
-          <li>
-            <a href="contacts.html" class="footerLink">
-              <b>
-                Contacts
-              </b>
-            </a>
-          </li>
-          <li>
-            <a href="security.html" class="footerLink">
-              <b>
-                Security
-              </b>
-            </a>
-          </li>
-        </ul>
+        <a class="footerLink">
+          <b>
+            Support
+          </b>
+        </a>
+        <br>
+        <a href="contacts.html" class="footerLink">
+          <b>
+            Contacts
+          </b>
+        </a>
+        <br>
+        <a href="security.html" class="footerLink">
+          <b>
+            Security
+          </b>
+        </a>
       </div>
       <div style="text-align:center;">
-        <ul>
-          <li>
-            <a href="questions.html" class="footerLink">
-              <b>
-                Frequently Asked Questions
-              </b>
-            </a>
-          </li>
-        </ul>
+        <a href="questions.html" class="footerLink">
+          <b>
+            Frequently Asked Questions
+          </b>
+        </a>
       </div>
       <div style="text-align:left; padding-left:15px;">
-        <ul>
-          <li>
-            <a>
-              <b>
-                Discord
-              </b>
-            </a>
-          </li>
-          <li>
-            <a>
-              <b>
-                Twitter
-              </b>
-            </a>
-          </li>
-        </ul>
+        <a>
+          <b>
+            Discord
+          </b>
+        </a>
+        <br>
+        <a>
+          <b>
+            Twitter
+          </b>
+        </a>
       </div>
+      <br>
+      <h2>
+        SciBooks
+      </h2>
     </footer>
   </body>
 </html>
