--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header>
-      <div style="text-align:left;padding-left:15px;margin-right:20px;">
+      <div class="headTitle">
         <h2>
           <b>
             SciBooks
