--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </option>
           </optgroup>
         </select>
-        <input type="text" id="Search" onkeyup="search()" placeholder="Search..." style="margin-left: 49%;">
+        <input type="text" id="Search" onkeyup="search()" placeholder="Search...">
       </div>
     </header>
     <nav class="stick">
