--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
           </b>
         </p>
       </div>
-      <hr style="display:flex;">
-      <div class="find">
+      <br>
+      <div class="find" style="margin: none;">
         <select>
           <option value="All" selected>
             All
@@ -50,9 +50,31 @@
             <option value="NeilDeGrasse">
               Neil DeGrasse Tyson
             </option>
+            <option value="Donald">
+              Donald Goldsmith
+            </option>
+            <option value="Chris">
+              Chris Hadfield
+            </option>
+            <option value="Stephen">
+              Stephen Hawking
+            </option>
+            <option value="BD">
+              Brian W. Kernighan & Dennis M. Ritchie
+            </option>
+            <option value="Cixin">
+              Cixin Liu
+            </option>
+            <option value="Baoshu">
+              Baoshu
+            </option>
+            <option value="GL">
+              Gregory Benford & Larry Niven
+            </option>
           </optgroup>
         </select>
         <input type="text" id="Search" onkeyup="search()" placeholder="Search...">
+        <input type="search">
       </div>
     </header>
     <nav class="stick">
