--- a/index.html
+++ b/index.html
@@ -43,10 +43,7 @@
               Short Stories
             </option>
           </optgroup>
-          <optgroup label="Test">
-
-          </optgroup>
-          <optgroup lable="Authors">
+          <optgroup lable="Author">
             <option value="Michio-Kaku">
               Michio Kaku
             </option>
