--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               Short Stories
             </option>
           </optgroup>
-          <optgroup lable="Author">
+          <optgroup label="Author">
             <option value="Michio-Kaku">
               Michio Kaku
             </option>
