--- a/index.html
+++ b/index.html
@@ -20,10 +20,6 @@
           </b>
         </p>
       </div>
-      <br>
-      <br>
-      <br>
-      <br>
       <div class="find" style="margin: none;">
         <select>
           <option value="All" selected>
@@ -77,7 +73,7 @@
           </optgroup>
         </select>
         <input type="text" id="Search" onkeyup="search()" placeholder="Search...">
-        <input type="search">
+        <input type="submit">
       </div>
     </header>
     <nav class="stick">
