--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <span style="color:blue;">
               Sci
             </span>
-            <span style="color:yellow;">
+            <span style="color:green;">
               Books
             </span>
           </b>
@@ -139,7 +139,7 @@
         <span style="color:blue;">
           Sci
         </span>
-        <span style="color:yellow;">
+        <span style="color:green;">
           Books
         </span>
       </h2>
