--- a/index.html
+++ b/index.html
@@ -94,6 +94,14 @@
       </div>
     </nav>
     <hr>
+    <h2>
+      <span style="color:red;text-decoration:underline;">
+        Deals:
+      </span>
+      <hr>
+    </h2>
+
+    <hr>
     <footer>
       <div style="text-align:right; padding-right:15px;">
         <a class="footerLink">
