--- a/index.html
+++ b/index.html
@@ -98,9 +98,33 @@
       <span style="color:red;text-decoration:underline;">
         Deals:
       </span>
-      <hr>
     </h2>
+    <table>
+      <tr>
+        <th onclick="window.location.href='productPage.html';">
+          <img src="resources/book8(1).jpg">
+          <hr>
+          <p>
+            <span style="background-color:red;color:white;font-size:15px;">
+              25% off
+            </span>
+            <span style="color:#eee;text-decoration:line-through;font-size:20px;">
+              $60.00 
+            </span>
+            <span style="font-size:20px">
+              $45.00
+            </span>
+            <br>
+            <span style="font-size:15px;">
+              Brief Answers, Big Questions, Collection
+            </span>
+          </p>
+        </th>
+        <th onclick="window.location.href='productPage.html';">
 
+        </th>
+      </tr>
+    </table>
     <hr>
     <footer>
       <div style="text-align:right; padding-right:15px;">
