--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <table>
       <tr>
         <th onclick="window.location.href='productPage.html';">
-          <img src="resources/book8(1).jpg">
+          <img src="resources/book8(1).jpg" width="20%" height="auto">
           <hr>
           <p>
             <span style="background-color:red;color:white;font-size:15px;">
