--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <span style="background-color:red;color:white;font-size:15px;">
               25% off
             </span>
-            <span style="color:#eee;text-decoration:line-through;font-size:20px;">
+            <span style="color:rgb(86, 89, 89);text-decoration:line-through;font-size:20px;">
               $60.00 
             </span>
             <span style="font-size:20px">
