--- a/index.html
+++ b/index.html
@@ -102,17 +102,18 @@
     <table>
       <tr>
         <th onclick="window.location.href='productPage.html';">
-          <img src="resources/book8(1).jpg" width="20%" height="auto">
+          <img src="resources/book8(1).jpg" width="10%" height="auto">
           <hr>
           <p>
             <span style="background-color:red;color:white;font-size:15px;">
               25% off
             </span>
+            <br>
             <span style="color:rgb(86, 89, 89);text-decoration:line-through;font-size:20px;">
               $60.00 
             </span>
             <span style="font-size:20px">
-              $45.00
+               $45.00
             </span>
             <br>
             <span style="font-size:15px;">
@@ -121,7 +122,23 @@
           </p>
         </th>
         <th onclick="window.location.href='productPage.html';">
-
+          <img src="resources/book6(1).jpg" width="10%" height="auto">
+          <p>
+            <span style="background-color:red;color:white;font-size:15px;">
+              50% off
+            </span>
+            <br>
+            <span style="color:rgb(86, 89, 89);text-decoration:line-through;font-size:20px;">
+              $18.00 
+            </span>
+            <span style="font-size:20px">
+               $9.00
+            </span>
+            <br>
+            <span style="font-size:15px;">
+              The Grand Design
+            </span>
+          </p>
         </th>
       </tr>
     </table>
