--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         Deals:
       </span>
     </h2>
-    <table>
+    <table style="margin-left:50%;">
       <tr>
         <th onclick="window.location.href='productPage.html';">
           <img src="resources/book8(1).jpg" width="10%" height="auto">
