--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         Deals:
       </span>
     </h2>
-    <table style="margin-left:50%;">
+    <table>
       <tr>
         <th onclick="window.location.href='productPage.html';">
           <img src="resources/book8(1).jpg" width="10%" height="auto">
@@ -172,17 +172,18 @@
         </a>
       </div>
       <div style="text-align:left; padding-left:15px;">
-        <a>
-          <b>
-            Discord
-          </b>
-        </a>
-        <br>
-        <a>
-          <b>
-            Twitter
-          </b>
-        </a>
+        <div id="git">
+          <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" onclick="window.location.href='https://github.com/caleb-sudo';">
+          <p>
+            github
+          </p>
+        </div>
+        <div>
+          <img src="https://www.iconpacks.net/icons/1/free-youtube-icon-123-thumb.png">
+          <p>
+            youtube
+          </p>
+        </div>
       </div>
       <br>
       <h2>
