--- a/index.html
+++ b/index.html
@@ -173,13 +173,13 @@
       </div>
       <div style="text-align:left; padding-left:15px;">
         <div id="git">
-          <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" onclick="window.location.href='https://github.com/caleb-sudo';">
+          <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" onclick="window.location.href='https://github.com/caleb-sudo';" width="auto" height="50px">
           <p>
             github
           </p>
         </div>
         <div>
-          <img src="https://www.iconpacks.net/icons/1/free-youtube-icon-123-thumb.png">
+          <img src="https://www.iconpacks.net/icons/1/free-youtube-icon-123-thumb.png" width="auto" height="50px">
           <p>
             youtube
           </p>
