--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
           </b>
         </a>
       </div>
-      <div style="text-align:left; padding-left:15px;">
+      <div>
         <div id="git">
           <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" onclick="window.location.href='https://github.com/caleb-sudo';" width="auto" height="50px" class="social">
           <p>
