--- a/index.html
+++ b/index.html
@@ -172,13 +172,13 @@
         </a>
       </div>
       <div>
-        <div id="git" style="padding-right:15px;margin:none;>
+        <div id="git" style="padding-left:15px;>
           <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" onclick="window.location.href='https://github.com/caleb-sudo';" width="auto" height="50px" class="social">
           <p>
             github
           </p>
         </div>
-        <div id="youtube" style="padding:65px;margin:none;">
+        <div id="youtube" style="padding-left:65px;">
           <img src="https://www.iconpacks.net/icons/1/free-youtube-icon-123-thumb.png" width="auto" height="50px" class="social">
           <p>
             youtube
