--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         </a>
       </div>
       <div>
-        <div id="git" style="padding-left:15px;>
+        <div id="git" style="padding-left:15px;">
           <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" onclick="window.location.href='https://github.com/caleb-sudo';" width="auto" height="50px" class="social">
           <p>
             github
