--- a/index.html
+++ b/index.html
@@ -171,20 +171,26 @@
           </b>
         </a>
       </div>
-      <div>
-        <div id="git" style="padding-left:15px;">
-          <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" onclick="window.location.href='https://github.com/caleb-sudo';" width="auto" height="50px" class="social">
-          <p>
-            github
-          </p>
-        </div>
-        <div id="youtube" style="padding-left:65px;">
-          <img src="https://www.iconpacks.net/icons/1/free-youtube-icon-123-thumb.png" width="auto" height="50px" class="social">
-          <p>
-            youtube
-          </p>
-        </div>
-      </div>
+      <table style="float:left;padding-left:15px;">
+        <tr>
+          <th>
+            <div id="git">
+              <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" onclick="window.location.href='https://github.com/caleb-sudo';" width="auto" height="50px" class="social">
+              <p>
+                github
+              </p>
+            </div>
+          </th>
+          <th>
+            <div id="youtube">
+              <img src="https://www.iconpacks.net/icons/1/free-youtube-icon-123-thumb.png" width="auto" height="50px" class="social">
+              <p>
+                youtube
+              </p>
+            </div>
+          </th>
+        </tr>
+      </table>
       <br>
       <h2>
         <span style="color:blue;">
