--- a/index.html
+++ b/index.html
@@ -171,22 +171,16 @@
           </b>
         </a>
       </div>
-      <table style="float:left;padding-left:15px;">
+      <table style="float:left;padding-left:15px;margin-bottom:15px;">
         <tr>
           <th>
             <div id="git">
               <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" onclick="window.location.href='https://github.com/caleb-sudo';" width="auto" height="50px" class="social">
-              <p>
-                github
-              </p>
             </div>
           </th>
           <th>
             <div id="youtube">
               <img src="https://www.iconpacks.net/icons/1/free-youtube-icon-123-thumb.png" width="auto" height="50px" class="social">
-              <p>
-                youtube
-              </p>
             </div>
           </th>
         </tr>
