--- a/index.html
+++ b/index.html
@@ -183,8 +183,14 @@
               <img src="https://www.iconpacks.net/icons/1/free-youtube-icon-123-thumb.png" width="auto" height="50px" class="social">
             </div>
           </th>
+          <th>
+            <div id="twitter">
+              <img src="https://freepnglogo.com/images/all_img/1691832278twitter-x-logo-png.png" width="auto" height="50px" class="social">
+            </div>
+          </th>
         </tr>
       </table>
+      <br>
       <br>
       <h2>
         <span style="color:blue;">
