--- a/index.html
+++ b/index.html
@@ -77,6 +77,59 @@
           </optgroup>
         </select>
         <input type="text" id="search" onkeyup="search()" placeholder="Search...">
+        <ul id="searchItems">
+          <li>
+            Quantum Supremacy
+          </li>
+          <li>
+            On The Origin Of Time
+          </li>
+          <li>
+            Origins
+          </li>
+          <li>
+            Astrophysics for people in a hurry
+          </li>
+          <li>
+            An astronaut's guide to life
+          </li>
+          <li>
+            The Grand Design
+          </li>
+          <li>
+            Letters from an Astrophysicist
+          </li>
+          <li>
+            Brief Answers, Big Questions, Collection
+          </li>
+          <li>
+            The C Programming Language
+          </li>
+          <li>
+            The Three Body Problem Trilogy
+          </li>
+          <li>
+            Supernova Era
+          </li>
+          <li>
+            Ball Lightning
+          </li>
+          <li>
+            To Hold Up The Sky
+          </li>
+          <li>
+            The Wandering Earth
+          </li>
+          <li>
+            The Redemtion Of Time
+          </li>
+          <li>
+            Bowl Of Heaven & Shipstar
+          </li>
+          <li>
+            Glourious
+          </li>
+        </ul>
       </div>
     </header>
     <nav class="stick">
