--- a/index.html
+++ b/index.html
@@ -77,57 +77,91 @@
           </optgroup>
         </select>
         <input type="text" id="search" onkeyup="search()" placeholder="Search...">
-        <ul id="searchItems">
+        <ul id="searchMenu">
           <li>
-            Quantum Supremacy
+            <a href="productPage.html">
+              Quantum Supremacy
+            </a>
           </li>
           <li>
-            On The Origin Of Time
+            <a href="productPage.html">
+              On The Origin Of Time
+            </a>
           </li>
           <li>
-            Origins
+            <a href="productPage.html">
+              Origins
+            </a>
           </li>
           <li>
-            Astrophysics for people in a hurry
+            <a href="productPage.html">
+              Astrophysics for people in a hurry
+            </a>
           </li>
           <li>
-            An astronaut's guide to life
+            <a href="productPage.html">
+              An astronaut's guide to life
+            </a>
           </li>
           <li>
-            The Grand Design
+            <a href="productPage.html">
+              The Grand Design
+            </a>
           </li>
           <li>
-            Letters from an Astrophysicist
+            <a href="productPage.html">
+              Letters from an Astrophysicist
+            </a>
           </li>
           <li>
-            Brief Answers, Big Questions, Collection
+            <a href="productPage.html">
+              Brief Answers, Big Questions, Collection
+            </a>
           </li>
           <li>
-            The C Programming Language
+            <a href="productPage.html">
+              The C Programming Language
+            </a>
           </li>
           <li>
-            The Three Body Problem Trilogy
+            <a href="productPage.html">
+              The Three Body Problem Trilogy
+            </a>
           </li>
           <li>
-            Supernova Era
+            <a href="productPage.htm;">
+              Supernova Era
+            </a>
           </li>
           <li>
-            Ball Lightning
+            <a href="productPage.html">
+              Ball Lightning
+            </a>
           </li>
           <li>
-            To Hold Up The Sky
+            <a href="productPage.html">
+              To Hold Up The Sky
+            </a>
           </li>
           <li>
-            The Wandering Earth
+            <a href="productPage.html">
+              The Wandering Earth
+            </a>
           </li>
           <li>
-            The Redemtion Of Time
+            <a href="productPage.html">
+              The Redemtion Of Time
+            </a>
           </li>
           <li>
-            Bowl Of Heaven & Shipstar
+            <a href="productPage.html">
+              Bowl Of Heaven & Shipstar
+            </a>
           </li>
-          <li>
-            Glourious
+          <li href="productPage.html">
+            <a>
+              Glourious
+            </a>
           </li>
         </ul>
       </div>
