--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </option>
           </optgroup>
         </select>
-        <input type="text" id="search" onkeyup="search()" placeholder="Search...">
+        <input type="text" id="Search" onkeyup="search()" placeholder="Search...">
         <ul id="searchMenu">
           <li>
             <a href="productPage.html">
