--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
               Bowl Of Heaven & Shipstar
             </a>
           </li>
-          <li href="productPage.html">
-            <a>
+          <li>
+            <a href="productPage.html">
               Glourious
             </a>
           </li>
