--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
-    <script src="sorter.js"></script>
+    <script type="text/javascript" src="script.js"></script>
   </head>
   <body>
     <header>
