--- a/sorter.html
+++ b/sorter.html
@@ -83,7 +83,7 @@
             </div>
           </fieldset>
           <br>
-          <fieldset>
+          <fieldset class="authorFilter">
             <legend>
               Authors
             </legend>
