--- a/sorter.html
+++ b/sorter.html
@@ -87,57 +87,57 @@
             <legend>
               Authors
             </legend>
-            <input type="radio" name="Authors" value="All" id="All">
+            <input type="radio" name="Authors" value="All" id="All" class="rad">
             <label for="All">
               All
             </label>
             <br>
-            <input type="radio" name="Authors" value="Michio" id="Michio">
+            <input type="radio" name="Authors" value="Michio" id="Michio" class="rad">
             <label for="Michio">
               Michio Kaku
             </label>
             <br>
-            <input type="radio" name="Authors" id="Thomas" value="Thomas">
+            <input type="radio" name="Authors" id="Thomas" value="Thomas" class="rad">
             <label for="Thomas">
               Thomas Hertog
             </label>
             <br>
-            <input type="radio" name="Authors" id="Neil" value="Neil">
+            <input type="radio" name="Authors" id="Neil" value="Neil" class="rad">
             <label for="Neil">
               Neil DeGrasse Tyson
             </label>
             <br>
-            <input type="radio" name="Authors" id="don" value="don">
+            <input type="radio" name="Authors" id="don" value="don" class="rad">
             <label for="don">
               Donald Goldsmith
             </label>
             <br>
-            <input type="radio" name="Authors" id="Chris" value="Chris">
+            <input type="radio" name="Authors" id="Chris" value="Chris" class="rad">
             <label for="Chris">
               Chris Hadfield
             </label>
             <br>
-            <input type="radio" name="Authors" id="Stephen" value="Stephen">
+            <input type="radio" name="Authors" id="Stephen" value="Stephen" class="rad">
             <label for="Stephen">
               Stephen Hawking
             </label>
             <br>
-            <input type="radio" name="Authors" id="BR" value="BR">
+            <input type="radio" name="Authors" id="BR" value="BR" class="rad">
             <label for="BR">
               Brian W. Kernighan & Dennis M. Ritchie
             </label>
             <br>
-            <input type="radio" name="Authors" id="Cixin" value="Cixin">
+            <input type="radio" name="Authors" id="Cixin" value="Cixin" class="rad">
             <label for="Cixin">
               Cixin Liu
             </label>
             <br>
-            <input type="radio" name="Authors" id="Baoshu" value="Baoshu">
+            <input type="radio" name="Authors" id="Baoshu" value="Baoshu" class="rad">
             <label for="Baoshu">
               Baoshu
             </label>
             <br>
-            <input type="radio" name="Authors" id="GL" value="GL">
+            <input type="radio" name="Authors" id="GL" value="GL" class="rad">
             <label for="GL">
               Gregory Benford & Larry Niven
             </label>
