--- a/sorter.html
+++ b/sorter.html
@@ -155,9 +155,9 @@
       </form>
     </section>
     <br>
-    <section>
-      <table>
-        <tr>
+    <section class="booksSect">
+      <table class="booksTable">
+        <tr class="booksRow">
           <th class="Science" onclick="page0()">
             <img src="resources/book1(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
@@ -220,7 +220,7 @@
             </span>
           </th>
         </tr>
-        <tr>
+        <tr class="booksRow">
           <th class="Science" onclick="window.location.href='productPage.html';">
             <img src="resources/book4(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
@@ -285,7 +285,7 @@
             </span>
           </th>
         </tr>
-        <tr>
+        <tr class="booksRow">
           <th class="Science" onclick="window.location.href='productPage.html';">
             <img src="resources/book7(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
@@ -350,7 +350,7 @@
             </span>
           </th>
         </tr>
-        <tr>
+        <tr class="booksRow">
           <th class="Space" onclick="window.location.href='productPage.html';">
             <img src="resources/book10(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
@@ -415,7 +415,7 @@
             </span>
           </th>
         </tr>
-        <tr>
+        <tr class="booksRow">
           <th class="ShortStories" onclick="window.location.href='productPage.html';">
             <img src="resources/book13(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
@@ -480,7 +480,7 @@
             </span>
           </th>
         </tr>
-        <tr>
+        <tr class="booksRow">
           <th class="Space" onclick="window.location.href='productPage.html';">
             <img src="resources/book16(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
@@ -527,8 +527,6 @@
       </table>
     </section>
   </article>
-
-
   <footer>
     <div style="text-align:right; padding-right:30px;">
         <a class="footerLink">
