--- a/sorter.html
+++ b/sorter.html
@@ -87,7 +87,7 @@
             <legend>
               Authors
             </legend>
-            <input type="radio" name="Authors" value="All" id="All" class="rad">
+            <input type="radio" name="Authors" value="All" id="All" class="rad" checked>
             <label for="All">
               All
             </label>
