--- a/productPage.html
+++ b/productPage.html
@@ -28,10 +28,8 @@
         </nav>
         <hr>
         <br>
-        <p id="test">
-
-        </p>
             <div class="pictures" onclick="Increase()">
+                <img id="pict1">
             </div>
             <fieldset style="float:right;padding-right:100px;">
               <div>
