--- a/productPage.html
+++ b/productPage.html
@@ -29,7 +29,7 @@
         <hr>
         <br>
             <div class="pictures" onclick="Increase()">
-                <img id="pict1">
+                <img src="" id="pict1">
             </div>
             <fieldset style="float:right;padding-right:100px;">
               <div>
