--- a/productPage.html
+++ b/productPage.html
@@ -29,7 +29,24 @@
         <hr>
         <br>
             <div class="pictures" onclick="Increase()">
-                <img src="" id="pict1">
+                <table>
+                    <tr>
+                        <th>
+                            <img src="" id="pict1" width="auto" height="700px">
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>
+                            <img src="" id="pict2" width="100px" height="100px">
+                        </th>
+                        <th>
+                            <img src="" id="pict3" width="100px" height="100px">
+                        </th>
+                        <th>
+                            <img src="" id="pict4" width="100px" height="100px">
+                        </th>
+                    </tr>
+                </table>
             </div>
             <fieldset style="float:right;padding-right:100px;">
               <div>
