--- a/sorter.html
+++ b/sorter.html
@@ -61,7 +61,11 @@
               Topics
             </legend>
             <div class="topics">
-              <input type="radio" id="Science" name="Topics" value="Science" class="in" checked>
+              <input type="radio" id="AllTopics" name="Topics" value="All" class="in" checked>
+              <label for="All">
+                All
+              </label>
+              <input type="radio" id="Science" name="Topics" value="Science" class="in">
               <label for="Science">
                 Science
               </label>
