--- a/Cart.html
+++ b/Cart.html
@@ -29,8 +29,10 @@
         Deals
       </div>
     </nav>
-    <div class="items">
-      
+    <div class="items" cart()>
+      <ul id="itemsList">
+        
+      </ul>
     </div>
     <div class="information">
       <p class="totals">
