--- a/Cart.html
+++ b/Cart.html
@@ -28,11 +28,12 @@
     </nav>
     <div class="items" cart()>
       <ul id="itemsList">
-        
+        hello
       </ul>
     </div>
     <div class="information">
       <p class="totals">
+        hello
       </p>
       <button>
         
