--- a/Cart.html
+++ b/Cart.html
@@ -26,14 +26,12 @@
         Cart
       </div>
     </nav>
-    <div class="items" cart()>
+    <div class="items" onload="checkCartCookie()">
       <ul id="itemsList">
-        hello
       </ul>
     </div>
     <div class="information">
       <p class="totals">
-        hello
       </p>
       <button>
         
