--- a/Cart.html
+++ b/Cart.html
@@ -8,14 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
-    <script src="sorter.js"></script>
-    <script src="productPage.js"></script>
   </head>
   <body>
     <header>
 
     </header>
-    <nav>
+    <nav class="stick">
       <div class="menu" onclick="window.location.href='index.html';">
         Home
       </div>
