--- a/security.html
+++ b/security.html
@@ -13,7 +13,7 @@
         <header>
 
         </header>
-        <nav>
+        <nav class="stick">
           <div class="menu" onclick="window.location.href='index.html';">
             Home
           </div>
