--- a/security.html
+++ b/security.html
@@ -11,7 +11,159 @@
     </head>
     <body>
         <header>
-
+          <div class="headTitle">
+            <p>
+              <b>
+                <span style="color:blue;">
+                  Sci
+                </span>
+                <span style="color:green;">
+                  Books
+                </span>
+              </b>
+            </p>
+          </div>
+          <div id="find" style="margin: none;">
+            <select id="selector">
+              <option value="All" selected>
+                All
+              </option>
+              <optgroup label="Topics">
+                <option value="Science">
+                  Science
+                </option>
+                <option value="Computer-Science">
+                  Computer Science
+                </option>
+                <option value="Space">
+                  Space
+                </option>
+                <option value="Short-Stories">
+                  Short Stories
+                </option>
+              </optgroup>
+              <optgroup label="Author">
+                <option value="Michio-Kaku">
+                  Michio Kaku
+                </option>
+                <option value="Thomas">
+                  Thomas Hertog
+                </option>
+                <option value="NeilDeGrasse">
+                  Neil DeGrasse Tyson
+                </option>
+                <option value="Donald">
+                  Donald Goldsmith
+                </option>
+                <option value="Chris">
+                  Chris Hadfield
+                </option>
+                <option value="Stephen">
+                  Stephen Hawking
+                </option>
+                <option value="BD">
+                  Brian W. Kernighan & Dennis M. Ritchie
+                </option>
+                <option value="Cixin">
+                  Cixin Liu
+                </option>
+                <option value="Baoshu">
+                  Baoshu
+                </option>
+                <option value="GL">
+                  Gregory Benford & Larry Niven
+                </option>
+              </optgroup>
+            </select>
+            <input type="text" id="Search" onkeyup="search()" placeholder="Search...">
+            <ul id="searchMenu">
+              <li>
+                <a href="productPage.html">
+                  Quantum Supremacy
+                </a>
+              </li>
+              <li>
+                <a href="productPage.html">
+                  On The Origin Of Time
+                </a>
+              </li>
+              <li>
+                <a href="productPage.html">
+                  Origins
+                </a>
+              </li>
+              <li>
+                <a href="productPage.html">
+                  Astrophysics for people in a hurry
+                </a>
+              </li>
+              <li>
+                <a href="productPage.html">
+                  An astronaut's guide to life
+                </a>
+              </li>
+              <li>
+                <a href="productPage.html">
+                  The Grand Design
+                </a>
+              </li>
+              <li>
+                <a href="productPage.html">
+                  Letters from an Astrophysicist
+                </a>
+              </li>
+              <li>
+                <a href="productPage.html">
+                  Brief Answers, Big Questions, Collection
+                </a>
+              </li>
+              <li>
+                <a href="productPage.html">
+                  The C Programming Language
+                </a>
+              </li>
+              <li>
+                <a href="productPage.html">
+                  The Three Body Problem Trilogy
+                </a>
+              </li>
+              <li>
+                <a href="productPage.htm;">
+                  Supernova Era
+                </a>
+              </li>
+              <li>
+                <a href="productPage.html">
+                  Ball Lightning
+                </a>
+              </li>
+              <li>
+                <a href="productPage.html">
+                  To Hold Up The Sky
+                </a>
+              </li>
+              <li>
+                <a href="productPage.html">
+                  The Wandering Earth
+                </a>
+              </li>
+              <li>
+                <a href="productPage.html">
+                  The Redemtion Of Time
+                </a>
+              </li>
+              <li>
+                <a href="productPage.html">
+                  Bowl Of Heaven & Shipstar
+                </a>
+              </li>
+              <li>
+                <a href="productPage.html">
+                  Glourious
+                </a>
+              </li>
+            </ul>
+          </div>
         </header>
         <nav class="stick">
           <div class="menu" onclick="window.location.href='index.html';">
